2011-11-29  Andrew Pinski  <apinski@cavium.com>

	* archures.c (bfd_mach_mips_octeonp): New macro.
	* bfd-in2.h: Regenerate.
	* bfd/cpu-mips.c (I_mipsocteonp): New enum value.
	(arch_info_struct): Add bfd_mach_mips_octeonp.
	* elfxx-mips.c (mips_set_isa_flags): Add bfd_mach_mips_octeonp.
	(mips_mach_extensions): Add bfd_mach_mips_octeonp.

2011-11-23  Tristan Gingold  <gingold@adacore.com>

	* vms-lib.c (get_idxlen): Add comments.  Fix type in sizeof.
	(vms_write_index): Add comments.

2011-11-22  DJ Delorie  <dj@redhat.com>

	* elf32-rx.c (rx_elf_object_p): Add more checks for "scanning" to
	avoid using the special non-swapping target when not explicitly
	requested.

2011-11-22  Daniel Calcoen  <Daniel.Calcoen@cern.ch>

	* elf32-rx.c (rx_elf_object_p): Correct typo: lma->vma.

2011-11-22  Tristan Gingold  <gingold@adacore.com>

	* mach-o.c (bfd_mach_o_print_symbol): Display COM for common
	symbols.  Print section name in brackets.

2011-11-21  Andreas Tobler  <andreast@fgznet.ch>

	* config.bfd: Add vectors for powerpc and powerpc64-freebsd.
	* configure.in (TDEFINES): Add rules for powerpc*-freebsd.
	* configure: Regenerate.
	* elf32-ppc.c: Add powerpc-freebsd definitions.
	* elf64-ppc.c: Add powerpc64-freebsd definitions.
	* targets.c: Add bits for powerpc and powerpc64-freebsd.

2011-11-17  Philipp Thomas  <philipp@thogro.org>

	* elf32-arm.c (elf32_thumb_to_arm_stub): Sync message so that it
	needs to be translated only once.

2011-11-16  Maciej W. Rozycki  <macro@codesourcery.com>

	* elf64-mips.c (mips_elf64_howto_table_rela): Set src_mask to
	zero throughout.
	(mips16_elf64_howto_table_rela): Likewise.
	(micromips_elf64_howto_table_rela): Likewise.
	* elfn32-mips.c (elf_mips_howto_table_rela): Likewise.
	(elf_mips16_howto_table_rela): Likewise.
	(elf_micromips_howto_table_rela): Likewise.

2011-11-15  Alan Modra  <amodra@gmail.com>
	    Andreas Tobler  <andreast@fgznet.ch>

	* elflink.c (_bfd_elf_create_got_section): Replace